kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
    projectcontour.io/upstream-protocol.tls: "8443"
spec:
  tls:
  - secretName: kubernetes-dashboard
    hosts:
    - kubernetes-dashboard.selfmade4u.de
  rules:
  - host: kubernetes-dashboard.selfmade4u.de
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 8443
          validation:
            caSecret: kubernetes-dashboard-certs
            subjectName: foo
